...
import UIKit
import Lottie

class FoodViewController: BaseViewController {

    @IBOutlet weak var collectionViewCategories: UICollectionView!
    @IBOutlet weak var tableViewFoodItems: UITableView!
    @IBOutlet weak var animationViewFood: AnimationView!
    
    var selectedCategoryIndex: Int = 0
    var selectedFoodIndex: Int = 0
    
    var categories: [FoodCategory] = []
...
